--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header {
     align-items: center;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: fixed;
+    z-index: 1;
     
 }
 header > h1 {
@@ -40,12 +41,56 @@ header > h1 {
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 77px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
-
+.criar-quizz > h1 {
+    font-size: 20px;
+    font-weight: 400;
+    color: #B9B9B9;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.criar-quizz > .button {
+    width: 151px;
+    height: 40px;
+    border: 1px dashed #EC362D;
+    border-radius: 50px;
+}
+.criar-quizz > .button > h2 {
+    font-weight: 400;
+    font-size: 21px;
+    color: #EC362D;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 7px;
+} 
 main {
     width: 1050px;
     margin-right: auto;
     margin-left: auto;
+}
+.seus-quizzes {
+    width: 1050px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 147px;
+    margin-bottom: 77px;
+}
+.seus-quizzes > h1 {
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    color: black;
 }
 main > h1 {
     margin-bottom: 12px;
@@ -57,23 +102,49 @@ main > h1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 .quizz {
     position: relative;
+    margin-top: 12px;
 }
 .titulo {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     position: absolute;
-    margin-top: 120px;
-    color:#FFFFFF;
+    justify-content: center;
+    align-items: flex-end;
     width: 300px;
-    height: 54px;
-    margin-right: 20px;
+    height: 175px;
+    color:#FFFFFF;
     margin-left: 20px;
+}
+.escondido {
+    display: none;
+}
+@media (max-width: 1100px) {
+    .criar-quizz {
+        width: 90%;
+    }
+    main {
+        width: 90%;
+
+    }
+    .seus-quizzes {
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+        flex-direction: column;
+    }
+    .quizzes {
+        flex-direction: column;
+    }
+    .quizz {
+        margin-bottom: 20px;
+        width: 90%;
+    }
+    
 }
 
 
