--- a/css/style.css
+++ b/css/style.css
@@ -80,8 +80,6 @@ header > h1 {
     cursor: pointer;
 }
 
-
-
 .seus-quizzes {
     width: 1050px;
     margin-right: auto;
@@ -140,29 +138,22 @@ main > h1 {
 
 }
 
-.quizzestodos div{
-    width: 340px;
-    height: 181px;
-    flex-wrap: wrap;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65.1%, #000000 100%);
-}
 .quizzestodos img {
-    width: 340px;
-    height: 181px;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
-    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65.1%, #000000 100%);
 }
 
 .quizzestodos h2{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 19px;
-line-height: 22px;
-display: flex;
-align-items: center;
-word-break: break-all;
-color: #FFFFFF;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    word-break: break-all;
+    color: #FFFFFF;
 }
 .quizz {
     position: relative;
@@ -170,11 +161,7 @@ color: #FFFFFF;
     width: 340px;
     flex-wrap: wrap;
 }
-.quizz img{
-    width: 340px;
-    height: 181px;
-   
-}
+
 .quizz > .titulo {
     display: flex;
     flex-direction: row;
@@ -188,6 +175,68 @@ color: #FFFFFF;
     margin-left: 20px;
 }
 
+.tela-inicial-mostrar-quiz{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.pergunta1{
+    width: 759px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 38px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+}
+.questao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pergunta1 h3{
+    width: 688.16px;
+    height: 137.99px;
+    background-color: #434CA0;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 700;
+    color: #FFFFFF;
+}
+.respostas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15px;
+    flex-wrap: wrap;
+}
+.respostas img{
+    margin: 16px 16px;
+}
+.tituloQuizz{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background: black;
+    opacity: 0.6;
+}
+.tituloQuizz img{
+    width: 100%;
+    height: 227px;
+    object-fit: cover;
+ 
+    opacity: 0.6;
+}
 
 .escondido {
     display: none;
@@ -241,13 +290,26 @@ color: #FFFFFF;
     text-align: center;
     height: 52px;
 }
+.quizzestodos div{
+    width: 340px;
+    height: 181px;
+    flex-wrap: wrap;
+}
 
-
-
-
-
-
-
+.tela-inicial-mostrar-quiz h1{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 22px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+}
 
 @media (max-width: 1100px) {
     .criar-quizz {
@@ -270,7 +332,14 @@ color: #FFFFFF;
         margin-bottom: 20px;
         width: 90%;
     }
-    
+    .respostas{
+    flex-direction: column;
+    }
+    .pergunta1{
+        margin-top: 200px;
+        width: 100%;
+    }
+
 }
 
 
