--- a/css/style.css
+++ b/css/style.css
@@ -252,18 +252,18 @@ main > h1 {
 
 
 
-.tela-inicial-criacao-quiz h1, .tela-criacao-quizz-perguntas h1 {
+.tela-inicial-criacao-quiz h1, .tela-criacao-quizz-perguntas h1, .tela-criacao-quizz-niveis h1 {
     text-align: center;
     font-weight: 700;
     color: #000000;
     margin-bottom: 26px;
 }
-.tela-criacao-quizz-perguntas .box h1 {
+.tela-criacao-quizz-perguntas .box h1, .tela-criacao-quizz-niveis .box h1, .tela-criacao-quizz-niveis .box h1 {
     display: flex;
     justify-content: flex-start;
     margin-bottom: 0;
 }
-.tela-inicial-criacao-quiz .box, .tela-criacao-quizz-perguntas .box {
+.tela-inicial-criacao-quiz .box, .tela-criacao-quizz-perguntas .box, .tela-criacao-quizz-niveis .box {
     width: 600px;
     height: 256px;
     background-color: #FFFFFF;
@@ -274,14 +274,14 @@ main > h1 {
     flex-direction: column;
     justify-content: space-between;
 }
-.tela-criacao-quizz-perguntas .frente-box {
+.tela-criacao-quizz-perguntas .frente-box, .tela-criacao-quizz-niveis .frente-box {
     margin: 0 auto;
     width: 600px;
     height: 74px;
     background-color: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 }
-.tela-criacao-quizz-perguntas .frente-box > h1 {
+.tela-criacao-quizz-perguntas .frente-box h1, .tela-criacao-quizz-niveis .frente-box h1{
     height: 74px;
     display: flex;
     align-items: center;
@@ -292,7 +292,10 @@ main > h1 {
     height: 830px;
     
 }
-.tela-inicial-criacao-quiz input, .tela-criacao-quizz-perguntas input {
+.tela-criacao-quizz-niveis .box {
+    height: 316px;
+}
+.tela-inicial-criacao-quiz input, .tela-criacao-quizz-perguntas input, .tela-criacao-quizz-niveis input {
     color: #BABABA;
     font-weight: 400;
     font-size: 19px;
@@ -303,7 +306,7 @@ main > h1 {
     border-radius: 5px;
     outline: none;
 }
-.tela-inicial-criacao-quiz .button, .tela-criacao-quizz-perguntas .button {
+.tela-inicial-criacao-quiz .button, .tela-criacao-quizz-perguntas .button, .tela-criacao-quizz-niveis .button {
     margin: 0 auto;
     width: 368.86px;
     height: 54px;
@@ -311,12 +314,12 @@ main > h1 {
     background-color: #EC362D;
     margin-top: 85px;
 }
-.tela-criacao-quizz-perguntas .question {
+.tela-criacao-quizz-perguntas .question, .tela-criacao-quizz-niveis .question {
     display: flex;
     flex-direction: column;
     margin-bottom: 25px;
 }
-.tela-inicial-criacao-quiz .button h2, .tela-criacao-quizz-perguntas .button h2{
+.tela-inicial-criacao-quiz .button h2, .tela-criacao-quizz-perguntas .button h2, .tela-criacao-quizz-niveis .button h2{
     font-weight: 400;
     font-size: 21px;
     color: #FFF5F4;
