--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ main > h1 {
 .quizzestodos{
     position: relative;
 }
-.titulo{
+.quizz .titulo{
     background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65.1%, #000000 100%);
     z-index: 1;
     position: absolute;
