--- a/css/style.css
+++ b/css/style.css
@@ -193,17 +193,21 @@ main > h1 {
     width: 759px;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     margin-top: 38px;
+    padding: 38px;
     background: #FFFFFF;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 }
 .questao{
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    bottom: 15px;
 }
 .pergunta1 h3{
     width: 688.16px;
@@ -225,8 +229,22 @@ main > h1 {
     margin-top: 15px;
     flex-wrap: wrap;
 }
-.respostas img{
+.answer img{
     margin: 16px 16px;
+    height: 175px;
+    width: 330px;
+    border-radius: 5px;
+}
+.certa h4{
+   color: #009C22;
+   font-weight: 700;
+}
+.errada h4{
+   color: #FF0B0B;
+   font-weight: 700;
+}
+.branca{
+    opacity: 0.3;
 }
 .tituloQuizz{
     position: relative;
@@ -249,8 +267,77 @@ main > h1 {
 .respostaQuizz{
     margin-top: 150px;
 }
+.refazer span{
+    background: #EC362D;
+    border-radius: 15px;
+    width: 219.64px;
+    height: 44px;
+    left: 78.36px;
+    top: 723px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF5F4;
+
+}
+.voltaTelaInicial span{
+    color: #818181;
+}
+.tela-inicial-mostrar-quiz .resultadoFinal{
+    margin-top: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    bottom: 15px;
+    background-color: #FFFFFF;
+    padding: 50px;
+    
+}
+.resultadoFinal .voltaTelaInicial{
+    height: 44px;
+    margin-top: 8px;
+}
+.resultadoFinal .imagemResultado{
+    width: 340px;
+    margin-top: 17px;
+}
 
 
+
+.tela-inicial-mostrar-quiz .escondido{
+    display: none;
+}
+.textoResultado h4{
+    width: 688.16px;
+    height: 137.99px;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-weight: 700;
+    color: #484848;
+}
+.porcentagem h3 {
+    width: 688.16px;
+    height: 137.99px;
+    background-color: #434CA0;
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 700;
+    color: #FFFFFF;
+}
 
 .tela-inicial-criacao-quiz h1, .tela-criacao-quizz-perguntas h1, .tela-criacao-quizz-niveis h1 {
     text-align: center;
