--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,9 @@ header > h1 {
 .button:hover {
     cursor: pointer;
 }
-
+.tela-sucesso-quizz h3:hover {
+    cursor: pointer;
+}
 .seus-quizzes {
     width: 1050px;
     margin-right: auto;
@@ -355,7 +357,7 @@ main > h1 {
     padding: 10px;
 }
 
-.tela-inicial-criacao-quiz h1, .tela-criacao-quizz-perguntas h1, .tela-criacao-quizz-niveis h1 {
+.tela-inicial-criacao-quiz h1, .tela-criacao-quizz-perguntas h1, .tela-criacao-quizz-niveis h1, .tela-sucesso-quizz h1{
     text-align: center;
     font-weight: 700;
     color: #000000;
@@ -409,7 +411,7 @@ main > h1 {
     border-radius: 5px;
     outline: none;
 }
-.tela-inicial-criacao-quiz .button, .tela-criacao-quizz-perguntas .button, .tela-criacao-quizz-niveis .button {
+.tela-inicial-criacao-quiz .button, .tela-criacao-quizz-perguntas .button, .tela-criacao-quizz-niveis .button, .tela-sucesso-quizz .button {
     margin: 0 auto;
     width: 368.86px;
     height: 54px;
@@ -417,12 +419,26 @@ main > h1 {
     background-color: #EC362D;
     margin-top: 85px;
 }
+.tela-sucesso-quizz h3 {
+    margin: 0 auto;
+    width: 219.64px;
+    height: 44px;
+    font-weight: 400;
+    font-size: 21px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    color: #818181;
+    margin-top: 20px;
+
+}
+
 .tela-criacao-quizz-perguntas .question, .tela-criacao-quizz-niveis .question {
     display: flex;
     flex-direction: column;
     margin-bottom: 25px;
 }
-.tela-inicial-criacao-quiz .button h2, .tela-criacao-quizz-perguntas .button h2, .tela-criacao-quizz-niveis .button h2{
+.tela-inicial-criacao-quiz .button h2, .tela-criacao-quizz-perguntas .button h2, .tela-criacao-quizz-niveis .button h2, .tela-sucesso-quizz .button h2{
     font-weight: 400;
     font-size: 21px;
     color: #FFF5F4;
